fixed the dashboard the view all -> link

--- a/annamalaiyar-software/templates/admin/dashboard.html
+++ b/annamalaiyar-software/templates/admin/dashboard.html
@@ -522,7 +522,7 @@
                 <div class="recent-orders">
                     <div class="section-header">
                         <h3>Recent Orders</h3>
-                        <a href="#" class="view-all-btn">
+                        <a href="{{ url_for('admin_orders') }}" class="view-all-btn">
                             View All
                             <span class="material-icons">arrow_forward</span>
                         </a>
